@@ -1,3 +1,0 @@
-rm_conffile /etc/bash_completion.d/cryptdisks 2:1.7.0-3
-rm_conffile /etc/init/cryptdisks-udev.conf 2:1.7.5-2
-rm_conffile /etc/init/cryptdisks.conf 2:1.7.5-2
