@@ -361,7 +361,7 @@ crypttab_key_check() {
     local mode="$(stat -L -c"%04a" -- "$CRYPTTAB_KEY")"
     if [ $(stat -L -c"%u" -- "$CRYPTTAB_KEY") -ne 0 ] || [ "${mode%00}" = "$mode" ]; then
         cryptsetup_message "WARNING: $CRYPTTAB_NAME: key file $CRYPTTAB_KEY has" \
-            "insecure ownership, see /usr/share/doc/cryptsetup-run/README.Debian.gz."
+            "insecure ownership, see /usr/share/doc/cryptsetup/README.Debian.gz."
     fi
 }
 
