@@ -1,7 +1,7 @@
 #!/bin/sh
 #
 # Script to decrypt the key which is encrypted with openssl.
-# See /usr/share/doc/cryptsetup-run/examples/gen-ssl-key to create such a key.
+# See /usr/share/doc/cryptsetup/examples/gen-ssl-key to create such a key.
 #
 
 decrypt_ssl () {
